feat: set up session-based authentication with Passport.js
 * feat: handle 404 errors for unmapped routes with custom Error404 class

 * feat: add global error handler for all HTTP status errors

 * feat: add custom error classes for 401 and 404 status codes

 * feat: create error page view

 * feat: change index page message if user logged in

 * feat: change header to show Logout link if logged in

 * feat: add middleware to set current user in response locals

 * feat: add GET logout endpoint

 * feat: add session messages support for login alerts
Extend SessionData using declaration merging to have 'messages' field.
That field is set by passport.authenticate()

Change tsconfig to allow .d.ts files

 * feat: add login POST local auth using passport.authenticate()

 * feat: add GET endpoint for user user login

 * feat: add login view with form validation messages and alerts compatibility

 * feat: add POST endpoint for user signup and display alert messages

 * feat: enhance signup error handling with alert messages for validation errors

 * feat: add alert component with customizable types and styles

 * feat: specify password requirements in sign up form

 * feat: add user sign up endpoint with validation and password hashing

 * build: add script for adding connect-pg-simple session table

 * feat: implement local authentication strategy with passport

 * feat: add password hashing and validation utilities

 * feat: add Prisma client for database interactions
The prisma devs recommend a single client instance be used in long-running apps like this.
That way excessive connection creation and teardown will be avoided.

 * build: add express-validator dependency and other TS types
Add ts types for pg, express-session and connect-pg-simple

 * refactor: update sign up route and rename '/partial' folder to '/partials'

 * feat: add form validation messages for user input

 * style: add red alert icon to ".error" css class

 * build: add tailwindcss forms plugin

 *

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,4 +1,5 @@
 @import 'tailwindcss';
+@plugin '@tailwindcss/forms';
 
 @theme {
   --font-roboto: 'Roboto';
@@ -12,4 +13,17 @@
     font-display: swap;
     src: url('/fonts/Roboto-Regular.ttf') format('truetype');
   }
+}
+.error::before {
+  content: '';
+  display: inline-block;
+  width: 18px;
+  height: 12px;
+  background-image: url('/icons/red-alert.svg');
+  background-size: 12px 12px;
+  background-position: center;
+  background-repeat: no-repeat;
+  box-sizing: content-box;
+  overflow: hidden;
+  vertical-align: middle;
 }
