feat: add user folder CRUD
 * feat: enhance folder navigation with breadcrumb and back button
Use folder card component to display folders in user's '/drive' ejs view

 * feat: create folder card ejs component

 * feat: add endpoint to retrieve folder contents by ID

 * refactor: change drive router to use auth middleware regardless
Instead of adding the auth middleware before every
req handler, the router is now set to use it every time.

 * feat: add default root folders on user creation

 * feat: add folder renaming functionality to 'drive' view

 * feat: add endpoint PUT /drive/folder for folder name change

 * refactor: extract folder name validation for reuse

 * feat: add folder delete functionality to 'drive' view sidebar

 * feat: add DELETE route for an user's folder

 * feat: add helper method for retrieving user's root folders

 * feat: setup method-override middleware for express

 * feat: add a dropdown dynamic ui element

 * feat: display root folders in sidebar list

 * feat: create folder list item component

 * feat: return user's root folders for '/drive' route

 * feat: add POST endpoint '/drive/folder/create' for folder creation

 * feat: add button to display folder creation input form

 * feat: add alerts displaying file validation errors

 * feat: add file validation utility module

 * feat: add Folder and File models to prisma schema
User has 1-n relation with Folder and File.

A folder can have many files and folders inside.
Folder has 1-n relation with Folder and File.

 * feat: apply missing migration of the connect-pg-simple session table to the db
Adding the 'session' table through psql created db drift.

A baseline migration was required to sync the migration history with the existing db.

 * build: run prisma db pull to update the prisma schema
Schema was changed when adding the session table from connect-pg-simple.
Running 'prisma db pull' syncs the table with the prisma schema

 * feat: add POST '/drive/upload' endpoint
By using mul

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -27,3 +27,19 @@
   overflow: hidden;
   vertical-align: middle;
 }
+
+@keyframes slideOut {
+  from {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  to {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+}
+
+.slide-out {
+  animation: slideOut 0.5s ease-in forwards;
+  animation-delay: 10s;
+}
