feat: add file and subfolders CRUD
 * feat: add 'create directory' button for when drive is empty

 * feat: add file download endpoint to 'drive' router

 * feat: implement recursive file deletion when a folder is removed

 * build: add mime dependency

 * refactor: change uploaded files names to contain UID and extension

 * feat: remove caching for when the user navigates back
Express sets caching to true in the headers.
This leads to deleted/updated items reappearing when user navigates back.
Removing caching solves it

 * refactor: set session data to have alerts
Now every update/delete request redirects to the main drive/parentFolder page
The alerts are passed through the Req obj.

 * fix: change file validation length check to only take file name without ext

 * feat: add PUT endpoint for file rename

 * feat: add DELETE endpoint for user files

 * feat: create file details ejs view

 * feat: add file details GET endpoint

 * feat: display the folders within a folder in 'drive' view

 * feat: add subfolder creation action to 'drive' view

 * feat: add POST endpoint for creating a folder within a folder

 * refactor: remove and replace prev components in 'drive' view

 * feat: create methods for particular type of form of an item with id

 * refactor: move dropdown component definitions to a separate imports file

 * feat: add a card version of the item with actions component

 * feat: add more flexible item with actions component for editing and deleting items

 * feat: add cascade delete to 'File' and 'Folder' tables
Deleting a User deletes his folders and files in the db.
Deleting a folder deletes its sub folders and files.

 * feat: include directory files as card elmnts in 'drive' view

 * feat: save file in DB in file upload method
Enhance file upload handling with validation and error management.

Now the file validation happens before upload.

 * refactor: change file upload route to contain parent folder ID param
Now we specify the parent folder to upl

--- a/src/views/account/signup.ejs
+++ b/src/views/account/signup.ejs
@@ -35,7 +35,7 @@
                     <span class="flex items-center px-1 invisible peer-valid:visible">
                         <i class="fa fa-solid fa-check bg-green-500 text-white text-sm border p-1 rounded-full"></i>
                     </span>
-                    <span class="error absolute -bottom-5 px-0.5 text-sm text-red-500 invisible peer-valid:invisible" aria-live="polite">
+                    <span class="error h-[5ch] absolute -bottom-[5ch] px-0.5 text-sm text-red-500 invisible peer-valid:invisible" aria-live="polite">
                     </span>
                 </label>
 
@@ -59,7 +59,7 @@
                     <span class="flex items-center px-1 invisible peer-valid:visible">
                         <i class="fa fa-solid fa-check bg-green-500 text-white text-sm border p-1 rounded-full"></i>
                     </span>
-                    <span class="error absolute -bottom-5 px-0.5 text-sm text-red-500 invisible peer-valid:invisible" aria-live="polite">
+                    <span class="error h-[5ch] absolute -bottom-[5ch] px-0.5 text-sm text-red-500 invisible peer-valid:invisible" aria-live="polite">
                 </label>
                 <span class="text-sm text-gray-500">
                     Password should be at least 8 characters including a number and a lowercase letter. 
