--- a/src/views/account/login.ejs
+++ b/src/views/account/login.ejs
@@ -35,7 +35,7 @@
                     <span class="flex items-center px-1 invisible peer-valid:visible">
                         <i class="fa fa-solid fa-check bg-green-500 text-white text-sm border p-1 rounded-full"></i>
                     </span>
-                    <span class="error absolute -bottom-5 px-0.5 text-sm text-red-500 invisible peer-valid:invisible" aria-live="polite">
+                    <span class="h-[5ch] error absolute -bottom-[5ch] px-0.5 text-sm text-red-500 invisible peer-valid:invisible" aria-live="polite">
                     </span>
                 </label>
 
@@ -58,7 +58,7 @@
                     <span class="flex items-center px-1 invisible peer-valid:visible">
                         <i class="fa fa-solid fa-check bg-green-500 text-white text-sm border p-1 rounded-full"></i>
                     </span>
-                    <span class="error absolute -bottom-5 px-0.5 text-sm text-red-500 invisible peer-valid:invisible" aria-live="polite">
+                    <span class=" h-[5ch] error absolute -bottom-[5ch] px-0.5 text-sm text-red-500 invisible peer-valid:invisible" aria-live="polite">
                 </label>
                 <button type="submit" class="bg-violet-400 font-bold text-white px-3 py-2 rounded-sm hover:bg-violet-600">Login</button>
             </fieldset>
