feat: upload files to cloudinary
 * feat: update 'updatedAt' field on file/folder update

 * feat: incorporate cloudinary into saving and deleting files

 * feat: add field 'cloudinary_public_id' to 'File' table

 * build: add dependencies cloudinary and node-fetch

 * fix: show dropdown in the right place on touch

 * style: correct some tailwind classes css for a better layout and responsive design

 * feat: show dropdown elements on DOMContentLoaded

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -43,3 +43,14 @@
   animation: slideOut 0.5s ease-in forwards;
   animation-delay: 10s;
 }
+
+drop-down,
+drop-down-action {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+}
+.custom-col {
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+}
