--- a/src/views/components/card-with-actions.ejs
+++ b/src/views/components/card-with-actions.ejs
@@ -3,7 +3,7 @@
     aria-label="<%= displayName %> <%= item.name %>"
     href="<%= linkHref %>"
     title="<%= linkTitle %>"
-    class="h-full w-35 rounded-lg shadow-md hover:shadow-xl bg-white border border-violet-200 p-4 flex flex-col gap-2 items-center transition-shadow"
+    class="h-full rounded-lg shadow-md hover:shadow-xl bg-white border border-violet-200 p-4 flex flex-col gap-2 items-center transition-shadow"
   >
 
     <!-- Item icon -->
