--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,12 +1,12 @@
 <header
-  class="font-roboto shadow-2xl shadow-blue-200 flex flex-wrap w-full gap-10 justify-evenly p-8 dark:bg-slate-950 dark:text-amber-50"
+  class="font-roboto flex flex-wrap w-full gap-y-3 justify-evenly p-8 dark:bg-slate-950 dark:text-amber-50"
 >
-  <a href="/" class="flex flex-1 justify-center items-center">
-    <img src="/images/logo.png" class="img h-20" alt="logo" />
-    <h1 class="font-bold text-5xl">Odin Drive</h1>
+  <a href="/" class="flex items-center gap-1 ">
+    <img src="/images/logo.png" class="img h-15 md:h-20 bg-black dark:bg-transparent" alt="logo" />
+    <h1 class="font-bold text-3xl md:text-5xl">Odin Drive</h1>
   </a>
   <ul
-    class="flex-1 content-center flex gap-4 justify-center items-center text-xl font-bold"
+    class="content-center flex gap-4 justify-center items-center text-xl font-bold"
   >
       <% if (locals.currentUser) { %>
         <li class="hover:bg-violet-700 px-3 py-1 rounded-sm">
